<resources>

    <!-- Preference options-->
    <array name="pref_content_mode_array_val">
        <item>DETECT</item>
        <item>FULL</item>
        <item>COMPACT</item>
    </array>
    <array name="pref_lang_array_val" >
        <item>bg</item>
        <item>en</item>
    </array>
    <!-- Default preferences-->
    <string name="pref_default_url" translatable="false">http://b1b5043e.ngrok.io</string>
    <string name="pref_lang_default" translatable="false">bg</string>
    <string name="pref_content_mode_default" translatable="false">FULL</string>
    <!-- Preferences keys-->
    <string name="PREF_SERVER_URL" translatable="false">com.fmi.evelina.unimobileapp.PREF_SERVER_URL</string>
    <string name="PREF_CONTENT_MODE" translatable="false">com.fmi.evelina.unimobileapp.PREF_CONTENT_MODE</string>
    <string name="PREF_LANGUAGE" translatable="false">com.fmi.evelina.unimobileapp.PREF_LANGUAGE</string>

    <string name="app_name">UniMobileApp*</string>

    <!-- Strings related to login -->
    <string name="title_activity_login">LoginActivity*</string>
    <string name="prompt_user_id">User Id*</string>
    <string name="prompt_password">Password*</string>
    <string name="action_sign_in">Sign in*</string>
    <string name="unable_to_log_in">Unable to log in!*</string>

    <!-- String related to the Drawer Base Activity-->
    <string name="navigation_drawer_open">Open navigation drawer*</string>
    <string name="navigation_drawer_close">Close navigation drawer*</string>
    <string name="drawer_home">Home*</string>
    <string name="drawer_login">Log in*</string>
    <string name="drawer_logout">Log out*</string>
    <string name="drawer_news">News*</string>
    <string name="drawer_contacts">Contacts*</string>
    <string name="drawer_settings">Settings*</string>
    <string name="drawer_calendar">Calendar*</string>
    <string name="drawer_student_plan">Student Plan*</string>
    <string name="drawer_election_campaign">Election Campaign*</string>
    <string name="drawer_title">Uni mobile app*</string>
    <string name="drawer_learning_header">Learning*</string>
    <string name="drawer_teaching_header">Teaching*</string>
    <string name="drawer_administration_header">Administration*</string>

    <!-- String related to the Home Activity-->
    <string name="title_activity_home">HomeActivity*</string>
    <string name="home_text">Welcome/Home text*</string>


    <!-- String related to the News Activities-->
    <string name="title_activity_news">NewsActivity*</string>
    <string name="title_activity_news_details">NewsDetailsActivity*</string>
    <string name="news_load">Load More...*</string>
    <string name="news_deleted">News successfully deleted.*</string>
    <string name="news_created">News successfully created.*</string>
    <string name="news_upload_label">Upload Photo:*</string>
    <string name="news_create">Create News*</string>
    <string name="title_activity_news_create">CreateNewsActivity*</string>


    <!--Common strings-->
    <!--Buttons-->
    <string name="back_button">Back*</string>
    <string name="cancel_button">Cancel*</string>
    <string name="save_button">Save*</string>
    <string name="delete_button">Delete*</string>
    <!--Labels-->
    <string name="title_label">Title:*</string>
    <string name="description_label">Description:*</string>
    <string name="name_label">Name:*</string>
    <string name="room_label">Room:*</string>
    <string name="lecturer_label">Lecturer:*</string>
    <string name="course_credits_label">Credits:*</string>
    <string name="course_hours_label">Hours:*</string>
    <string name="date_label">Date*</string>
    <!--Confirmation-->
    <string name="confirmation_label">Confirmation*</string>
    <string name="confirm_cancel">Are you sure you want to cancel?*</string>
    <string name="confirm_delete">Are you sure you want to delete this item?*</string>
    <string name="confirmation_yes">ok*</string>
    <string name="confirmation_no">cancel*</string>
    <!--Other-->
    <string name="error_field_required">This field is required*</string>
    <string name="error_message">An error has occurred!*</string>


    <!-- String related to the Contacts Activities-->
    <string name="title_contacts">ContactsActivity*</string>
    <string name="title_contact_detail">ContactDetailsActivity*</string>
    <string name="contacts_administration">Administration*</string>
    <string name="contacts_lecturers">Lecturers*</string>
    <string name="contact_hours">Hours:*</string>
    <string name="contact_phone">Phone:*</string>
    <string name="contact_email">Email:*</string>
    <string name="contact_job">Job:*</string>


    <!-- String related to the Settings Activity-->
    <string name="title_activity_settings">SettingsActivity*</string>
    <string name="pref_url_title">Server URL*</string>
    <string name="pref_urt_summary">The URL of the application server*</string>
    <!-- Change the default URL of the server before deployment -->
    <string name="pref_send_mode_title">Send network mode*</string>
    <string name="pref_send_mode_summary">Send the network mode the server*</string>
    <string name="pref_lang_title">Language*</string>
    <array name="pref_lang_array_key">
        <item>Bulgarian*</item>
        <item>English*</item>
    </array>
    <string name="pref_content_mode_title">Content Mode*</string>
    <array name="pref_content_mode_key">
        <item>Detect*</item>
        <item>Full*</item>
        <item>Compact*</item>
    </array>


    <!-- String related to the Student Plan Activity-->
    <string name="title_student_plan">StudentPlanActivity*</string>
    <string name="student_plan_course">Course:*</string>
    <string name="student_plan_semester">Semester:*</string>
    <string-array name="student_plan_filter">
        <item>Only for my course*</item>
        <item>Only for my program*</item>
        <item>All*</item>
    </string-array>

    <!-- String related to the Election Campaign and Course Activities-->
    <string name="title_election_campaign">ElectionCampaignActivity*</string>
    <string name="title_election_course">ElectionCourseActivity*</string>
    <string name="election_campain_current">Current election campaign:*</string>
    <string name="election_campaign_start_date">Start date:*</string>
    <string name="election_campaign_close_date">Close date:*</string>
    <string name="election_campaign_end_date">End date:*</string>
    <string name="election_campaign_student_plan_filter">Student plan filter:*</string>
    <string name="election_campaign_category_filter">Category filter:*</string>
    <string name="election_campaign_not_active">The election campaign is not active!*</string>
    <string name="election_category_all">-- All --*</string>
    <string name="election_course_category">Category:*</string>
    <string name="election_course_min_grade">Min Grade:*</string>
    <string name="election_course_enroll">Enroll*</string>
    <string name="election_course_unenroll">Un-enroll*</string>
    <string name="election_course_enrolled">The course was enrolled.*</string>
    <string name="election_course_cancelled">The course was cancelled.*</string>
    <string name="election_course_cancel_confirm">Are you sure you want to un-enroll this course?*</string>
    <string name="election_course_course">Course*</string>


    <!-- String related to the Calendar Activities-->
    <string name="title_activity_calendar">CalendarActivity*</string>
    <string name="title_activity_create_event">CreateEventActivity*</string>
    <string name="calendar_today">Today*</string>
    <string name="calendar_day_view">Day View*</string>
    <string name="calendar_three_day_view">Three Day View*</string>
    <string name="calendar_week_view">Week View*</string>
    <string name="calendar_show_schedule">Show Schedule*</string>
    <string name="calendar_show_events">Show Events*</string>
    <string name="calendar_abbreviation">Abbreviation:*</string>
    <string name="calendar_title">Title:*</string>
    <string name="calendar_start_time">Start Time:*</string>
    <string name="calendar_end_time">End Time:*</string>
    <string name="calendar_location">Location:*</string>
    <string name="calendar_event_details">Event Details:*</string>
    <string name="calendar_elective">Elective:*</string>
    <string name="calendar_type">Type:*</string>
    <string name="calendar_lecturer">Lecturer:*</string>
    <string name="calendar_program">Program:*</string>
    <string name="calendar_event_saved">Event successfully saved.*</string>
    <string name="calendar_event_deleted">Event successfully deleted.*</string>
    <string name="calendar_select_date">Select date*</string>
    <string name="calendar_select_time">Select time*</string>
    <string name="calendar_room_undefined">Undefined*</string>
    <string name="calendar_event_elective">Elective*</string>
    <string name="calendar_event_mandatory">Mandatory*</string>
    <string name="calendar_end_time_error">End date should be after start date!*</string>
</resources>
