<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="pref_server_url"
        android:title="@string/pref_url_title"
        android:summary="@string/pref_urt_summary"
        android:defaultValue="@string/pref_default_url"
        android:positiveButtonText="@string/confirmation_yes"
        android:negativeButtonText="@string/confirmation_no"/>
    <CheckBoxPreference
        android:key="pref_send_network_mode"
        android:title="@string/pref_send_mode_title"
        android:summary="@string/pref_send_mode_summary"
        android:defaultValue="true" />
    <ListPreference
        android:key="pref_language"
        android:title="@string/pref_lang_title"
        android:dialogTitle="@string/pref_lang_title"
        android:entries="@array/pref_lang_array_key"
        android:entryValues="@array/pref_lang_array_val"
        android:defaultValue="@string/pref_lang_default" />
</PreferenceScreen>