<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.ElectionCampaign.ElectionCampaignActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/election_campain_current" />

    <TableLayout
        android:id="@+id/election_campaign_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        android:visibility="gone">

        <TableRow android:layout_width="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/election_campaign_start_date" />

            <TextView
                android:id="@+id/election_campaign_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/election_campaign_close_date" />

            <TextView
                android:id="@+id/election_campaign_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/election_campaign_end_date" />

            <TextView
                android:id="@+id/election_campaign_end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/election_campaign_not_active"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:layout_span="2"
                android:text="@string/election_campaign_not_active"
                android:visibility="gone"
                android:textColor="@color/colorAccent"/>
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/election_campaign_student_plan_filter" />

            <Spinner
                android:id="@+id/student_plan_spinner"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/election_campaign_category_filter" />

            <Spinner
                android:id="@+id/course_category_spinner"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </TableRow>

        <TableRow>


            <ListView
                android:id="@+id/election_courses_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"></ListView>
        </TableRow>
    </TableLayout>


</LinearLayout>

