<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/student_plan_course"
            android:id="@+id/course_list_item_title"
            android:layout_marginTop="5dp"
            android:padding="2dp"
            android:textStyle="bold"  />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_height="wrap_content"
            android:text="@string/course_hours_label"
            android:padding="2dp"
            android:layout_weight="1" />

        <TextView
            android:layout_height="wrap_content"
            android:id="@+id/course_list_item_hours"
            android:padding="2dp"
            android:layout_weight="1" />

        <TextView
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/course_credits_label"
            android:padding="2dp"/>

        <TextView
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/course_list_item_credits"
            android:padding="2dp"/>
    </TableRow>
</TableLayout>